--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=portfolio
+ADMIN_PASSWORD_HASH=$2a$12$MVRxs32cLt7UzGmXdesr0.isakASqLJbgqqfsZ4KiMVe3hvyF9XD.
