Utilisation de Cloudinary pour le stockage des images

--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,9 @@ DB_PASSWORD=password
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=portfolio
+
+CLOUDINARY_CLOUD=cloudinary_name
+CLOUDINARY_KEY=cloudinary_api
+CLOUDINARY_SECRET=cloudinary_api_secret
+
 ADMIN_PASSWORD_HASH=$2a$12$MVRxs32cLt7UzGmXdesr0.isakASqLJbgqqfsZ4KiMVe3hvyF9XD.
