--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,7 @@
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.2",
-    "multer-storage-cloudinary": "^4.0.0",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "streamifier": "^0.1.1"
   }
 }
