--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,12 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "fs": "^0.0.1-security",
     "multer": "^1.4.5-lts.2",
     "pg": "^8.15.6",
-    "streamifier": "^0.1.1"
+    "uuid": "^13.0.0"
   }
 }
